# rust_clean_architecture

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
app/: Cargo.toml
app/src/: main.rs
context/app_context/: Cargo.toml
context/app_context/src/: lib.rs
context/mock_context/: Cargo.toml
context/mock_context/src/: lib.rs
domain/: Cargo.toml
domain/entity/: Cargo.toml
domain/entity/src/: user.rs
domain/repository/: Cargo.toml
domain/repository/src/: user_repository.rs
infra/db_schema/: Cargo.toml
infra/db_schema/migrations/2022-10-29-074419_create_users/: up.sql
infra/db_schema/src/: schema.rs
infra/grpc_handler/: Cargo.toml
infra/grpc_handler/src/: convert.rs  lib.rs
infra/psql_repository/: Cargo.toml
infra/psql_repository/src/: user_repository.rs
infra/repository_impl/: Cargo.toml
proto/user/v1/: user.proto
share/error/src/: lib.rs
usecase/: Cargo.toml
usecase/src/: create_user.rs
usecase/src/user/: create_user.rs  get_users_by_ids.rs
