[package]
name = "usecase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
typed-builder = "0.10.0"

error = { path = "../share/error" }
entity = { path = "../domain/entity" }
repository = { path = "../domain/repository" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

mock_context = { path = "../context/mock_context" }
