[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
derive-getters = "0.2.0"
uuid = { version = "1.0.0", features = ["v4"] }
error = { path = "../../share/error" }

[dev-dependencies]
rstest = "0.15.0"
